[gd_scene load_steps=2 format=3 uid="uid://b0woulj7vy38c"]

[ext_resource type="Script" uid="uid://c8sea4cj8pmut" path="res://src/player/trail/collision/trail_collision_area.gd" id="1_xqoyl"]

[node name="TrailCollisionArea" type="Area2D"]
collision_mask = 2
script = ExtResource("1_xqoyl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
